-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.0.0
-
None
-
Windows 10
-
0aca5808cb322cd9236c6bca770cea1f389afeeb
- Open a session
- Start debugging, receive message "The CDB process terminated." - the debugger will still be "active" (the toolbar reads "Starting debugger "QmlCppEngine" for ABI "x86-windows-msvc2015-pe-64bit"..." and the "Stop Application" button is enabled)
- Open the session manager
- Create a new session, and instead of hitting "Ok", hit "Switch to"
- A warning will come up saying that debugging is still occurring and asks if it should terminate it; hit "Yes" and it will crash
For Gerrit Dashboard: QTCREATORBUG-16233 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
159493,2 | Debugger: Fix creator crash on spontanous debugger exit. | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |