Debugger: Fix creator crash on spontanous debugger exit.

Task-number: QTCREATORBUG-16233
Change-Id: I27b9ab17243463924dc410b3b5ffb0795ef3e33c
Reviewed-by: hjk <hjk@theqtcompany.com>